--- a/index.html
+++ b/index.html
@@ -10,6 +10,102 @@
 
 </head>
 <body>
+	<div class="container">
+		<div class="row">
+			<div class="col-md-4">
+				<img src="img/petstore_logo.png" alt="Pet Store" class="img-responsive pull-left logo"/>
+				<h3 class="logo-text">Pet Store</h3>
+			</div>
+			<div class="col-md-4 col-md-offset-4">
+				<ul class="nav nav-tabs">
+					<li role="presentation" class="active"><a href="#">Home</a></li>
+					<li role="presentation"><a href="#">Profile</a></li>
+					<li role="presentation"><a href="#">Messages</a></li>
+				</ul>
+			</div>
+		</div>
+	</div>
+	<div class="container-fluid">
+		<div class="jumbotron">
+  		<div class="container-fluid">
+    		<div class="hero-img img-responsive"/>
+					<p class="hero-text center-block"> The Products they love. Prices that you like</p>
+				</div>
+  		</div>
+		</div>
+	</div>
+	<div class="container">
+		<div class="row">
+			<div class="col-md-8">
+				<h1 class="featured-text">Featured</h1>
+				<p> Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+				<div class="row">
+					<div class="col-sm-6 col-md-4">
+					  <div class="thumbnail">
+					    <img src="img/product2.jpg" alt="...">
+					    <div class="caption">
+					      <h3>Cats ummm.</h3>
+					      <p>Here is a shove and get ready for the bug that makes you the crazy cat lady</p>
+					      <p><a href="#" class="btn btn-primary" role="button">Button</a> <a href="#" class="btn btn-default" role="button">Button</a></p>
+					    </div>
+					  </div>
+					</div>
+					<div class="col-sm-6 col-md-4">
+						<div class="thumbnail">
+							<img src="img/product3.jpg" alt="...">
+							<div class="caption">
+								<h3>Parrot Stuff</h3>
+								<p>Sometimes birds feel lonely. Give them some fun.</p>
+								<p><a href="#" class="btn btn-primary" role="button">Button</a> <a href="#" class="btn btn-default" role="button">Button</a></p>
+							</div>
+						</div>
+					</div>
+					<div class="col-sm-6 col-md-4">
+						<div class="thumbnail">
+							<img src="img/product1.jpg" alt="...">
+							<div class="caption">
+								<h3>Dog bowl</h3>
+								<p>The best dog bowl for your dog</p>
+								<p><a href="#" class="btn btn-primary" role="button">Button</a> <a href="#" class="btn btn-default" role="button">Purchase Now</a></p>
+							</div>
+						</div>
+					</div>
+				</div>
+			</div>
+			<div class="col-md-4">
+				<h1 class="featured-text">services</h1>
+				<div class="row">
+					<a href="#"class="adopt-text">dont adopt a cat</a>
+					<p>Lorem ipsum dolor sit ameisicing elit, sed .</p>
+				</div>
+				<div class="row">
+					<a href="#" class="adopt-text">find and love a dog</a>
+					<p> where can i find a dog that downloads steam games</p>
+				</div>
+				<div class="row">
+					<a href="#"class="adopt-text">dont adopt a cat</a>
+					<p>Lorem ipsum dolor sit ameisicing elit, sed .</p>
+				</div>
+			</div>
+		</div>
+	</div>
+	<div class="container-fluid footer footer">
+		<div class="row">
+			<div class="col-md-3">
+				<img src="img/petstore_logo.png" alt="" / class="footer-logo center-block">
+			</div>
+			<div class="col-md-3">
+				<address class="">
+					pet store <br>
+					fresno, ca <br>
+					<a mailto:info@petstore.com href="">infor@petstore.com</a>
+				</address>
+			</div>
+			<div class="col-md-3">
+				<i class="fa fa-twitter" aria-hidden="true" >Twitter</i><!-- need to link the font aesome to the a style sheet>
+			</div>
+		</div>
+	</div>
 	<!-- scripts -->
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
 	<script src="js/bootstrap.min.js"></script>
